--- a/appconfig.broadcastreader.json
+++ b/appconfig.broadcastreader.json
@@ -1,11 +1,11 @@
 {
-  "appName": "Clue Trainer",
-  "description": "New generation clue solver featuring detailed instructions and improved puzzle solvers.",
+  "appName": "CC Broadcast Reader",
+  "description": "Broadcast reader",
   "appUrl": "index.html",
   "configUrl": "appconfig.json",
-  "iconUrl": "/assets/icons/glass.png",
-  "defaultWidth": 500,
-  "defaultHeight": 380,
+  "iconUrl": "assets/icons/broadcast.png",
+  "defaultWidth": 250,
+  "defaultHeight": 180,
   "minWidth": 250,
   "minHeight": 180,
   "maxWidth": 1000,
